<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthorizationActivity"
    android:background="@drawable/fon">

    <LinearLayout
        android:id="@+id/logo_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/ruslan_display"
            android:text="@string/history_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@+id/logo_history">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/vollkorn_bold"
            android:gravity="center"
            android:text="@string/signIn"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/vollkorn_bold"
            android:text="@string/pocht"
            android:textColor="@color/dark_brown"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/input"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/vollkorn_bold"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/input"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_marginBottom="40dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/signInClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/vollkorn_semibold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/login"
                android:textColor="@color/beige"
                android:textSize="23sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vollkorn_semibold"
            android:gravity="center"
            android:text="Нет аккаунта?"
            android:textColor="@color/signatures"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textSignInClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vollkorn_semibold"
            android:gravity="center"
            android:text="@string/signup_underline"
            android:textColor="@color/signatures"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>