<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">
            <LinearLayout
                android:id="@+id/logo_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:layout_margin="10dp">
                <ImageView
                    android:layout_width="77dp"
                    android:layout_height="77dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/ruslan_display"
                    android:text="@string/history_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="25dp"
                app:layout_constraintTop_toBottomOf="@+id/logo_history">

                <TextView
                    android:id="@+id/textViewReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/registrachiya"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editFirstNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/familiya" />

                <EditText
                    android:id="@+id/editLastNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/otchestvo" />

                <EditText
                    android:id="@+id/editMiddleNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/date_r"
                    android:textColor="@color/dark_brown"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editBirthdayDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/pocht" />


                <EditText
                    android:id="@+id/editLoginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/editPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/repeat_password" />

                <EditText
                    android:id="@+id/editPasswordConfirmationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/signUpClick"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/vollkorn_semibold"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/signup"
                        android:textColor="@color/beige"
                        android:textSize="23sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vollkorn_semibold"
                    android:gravity="center"
                    android:text="Уже есть аккаунт?"
                    android:textColor="@color/signatures"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/textSignInClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vollkorn_semibold"
                    android:gravity="center"
                    android:text="@string/signup_u"
                    android:textColor="@color/signatures"
                    android:textSize="18sp"
                    android:layout_marginBottom="40dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>