<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".fragments.ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutFioReiting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/dark_beige"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="Фамилия И.О."
                    android:textSize="27sp"/>

                <TextView
                    android:id="@+id/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/vollkorn_bold"
                    android:paddingLeft="10dp"
                    android:text="100"
                    android:textDirection="firstStrongRtl"
                    android:textSize="27sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingHorizontal="5dp"
                    android:src="@drawable/star" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/dark_brown"
                        android:fontFamily="@font/vollkorn_bold"
                        android:layout_marginRight="10dp"
                        android:text="@string/profile_fam" />
                    <TextView
                        android:id="@+id/profileFam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/dark_brown"
                        android:fontFamily="@font/vollkorn_bold"
                        android:text="@string/familiya" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/dark_brown"
                        android:fontFamily="@font/vollkorn_bold"
                        android:layout_marginRight="10dp"
                        android:text="@string/profile_name" />
                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/dark_brown"
                        android:fontFamily="@font/vollkorn_bold"
                        android:text="@string/name" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/dark_brown"
                        android:fontFamily="@font/vollkorn_bold"
                        android:layout_marginRight="10dp"
                        android:text="@string/profile_otch" />
                    <TextView
                        android:id="@+id/profileOtch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/dark_brown"
                        android:fontFamily="@font/vollkorn_bold"
                        android:text="@string/otchestvo" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:visibility="visible"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/dark_brown"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="@string/testsUser" />

                <TextView
                    android:id="@+id/testUserLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:textColor="@color/signatures"
                    android:fontFamily="@font/vollkorn_bold"
                    android:text="Пока что тут пусто..." />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginHorizontal="15dp"
                android:id="@+id/recyclerUserTest"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>